gcc/testsuite/gm2/iso/pass/modulereturn.mod
MODULE modulereturn ;

BEGIN
   RETURN
END modulereturn.
