gcc/testsuite/gm2/iso/fail/badreturn.mod
MODULE badreturn ;

BEGIN
   RETURN 0
END badreturn.